k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: event-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-generator
  template:
    metadata:
      labels:
        app: event-generator
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: event-generator
          image: liveklass-app:latest
          imagePullPolicy: IfNotPresent
          args: ["python", "main.py"]
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8000
              name: metrics
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "pgrep -f 'python main.py' >/dev/null"
            initialDelaySeconds: 10
            periodSeconds: 20
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "pgrep -f 'python main.py' >/dev/null"
            initialDelaySeconds: 30
            periodSeconds: 30
