k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: event-generator
spec:
  type: ClusterIP
  selector:
    app: event-generator
  ports:
    - name: http
      port: 80
      targetPort: 8000
